# resolute

./: .gitignore  500M_FINAL_REPORT.txt  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
.hypothesis/constants/: 004e722d2b39195a  006b559781a41f7f  01831d6f995783ed  01aaf21929a19f93  0220a6e24fd589a6  033cea2e5cae6cf7  03a0bc33c3be41ac  041b82baf95116f0  044aa4a97dd3204b  0628f2618034526e  068c9e16d4886008  06c4fd33ccda233b  071a705608690431  07475514dc0bbadb  0799a57e5d15899f  07b8446a052edf99  09482feeaa124f43  09ae28b390a241d0  0a174ab092bdf149  0abeb6a2eeaa494b  0b08334a64a0dc37  0b1a4bdfddf6460d  0bbf713aaf267494  0c84926673dc2cd6  0cfa12dfbf9e9abb  0d81dd8c57144454  0e7f8902539f63f3  0f00997050228a3d  10d1155a56587e3a  110a1d1d892c7388  11a4fb9bf042a054  122b0f64dfba73b4  127e8fa3efd6a7b8  12e7e479072c853b  13efa0910df75e7a  146ce438f76c65d3  14ce7443b3faf241  161b8e1ee81d034f  1711dca7bbb78b0f  17e3f8cea4119fc7  (+370 more)
.hypothesis/tmp/: tmp2f5uqw86  tmp58kixlch  tmpa9x3rjxz  tmpgdszrxnd  tmpjj6nc9ol  tmpya0zwry4
benchmarks/: bench_errors.py  bench_overhead.py
docs/: index.html  index.html.headers
examples/: demo.py
explicit_result/: __init__.py  _async_helpers.py  _combinators.py  _context.py  _context_vars.py  _decorators.py  _do.py  _exceptions.py  _option.py  _result.py  _settings.py
explicit_result/integrations/: __init__.py  fastapi.py
integration_app/: __init__.py
resolute/: __init__.py  _async_helpers.py  _combinators.py  _context.py  _decorators.py  _do.py  _exceptions.py  _option.py  _result.py
resolute/integrations/: fastapi.py
tests/: run_tests.py  test_async_option.py  test_chatgpt_suite_3.py  test_comprehensive.py  test_consistency.py  test_deep_audit.py  test_do_metadata.py  test_enhancements.py  test_functional_validation.py  test_integration.py  test_integrations.py  test_memory.py  test_partition.py  test_pattern_matching.py  test_performance.py  test_production_simulation.py  test_properties.py  test_real_world.py  test_resolute.py  test_resolute_core.py  test_root_cause.py  test_typing.py  test_version.py
tests/demos/demo_comparison/: run_all.py
tests/demos/demo_comparison/legacy/: README.md  app.py
tests/demos/demo_comparison/modern/: README.md  app.py
tests/demos/demo_online_comparison/: run_comparison.py
tests/demos/demo_online_comparison/legacy/: README.md  db_handler.py
tests/demos/demo_online_comparison/modern/: db_handler.py
tests/integration_app/: __init__.py  database.py  main.py  services.py
