[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explicit-result"
version = "0.3.1"
description = "Result and Option types for Python — zero dependencies, fully typed"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Chukwunwike Obodo", email = "chukwunwike.obodo@hotmail.com" },
]
dependencies = []

keywords = ["result", "option", "error-handling", "types", "functional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/chukwunwike/explicit_result"
Repository = "https://github.com/chukwunwike/explicit_result"
Documentation = "https://github.com/chukwunwike/explicit_result#readme"
Issues = "https://github.com/chukwunwike/explicit_result/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "pyright",
    "hypothesis",
    "typing_extensions",
    "pytest-benchmark",
    "fastapi",
    "httpx",
    "pydantic",
    "mkdocs",
    "mkdocstrings[python]",
]
fastapi = [
    "fastapi",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["explicit_result"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.mypy]
strict = true


[tool.hatch.build.targets.wheel]
packages = ["explicit_result"]
